8177530: Module system implementation refresh (4/2017)
Co-authored-by: Jan Lahoda <jan.lahoda@oracle.com>
Reviewed-by: jjg